<resources>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="accounts_were_created">Accounts were created</string>
    <string name="add_my_location">Add my location</string>
    <string name="add_to_route">Add to route</string>
    <string name="add_route">Add route</string>
    <string name="app_name">Travel Guide</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="city">City</string>
    <string name="close">Close</string>
    <string name="cloud_download">Cloud download</string>
    <string name="cloud_upload">Cloud upload</string>
    <string name="comment">To comment</string>
    <string name="comment_sent">Comment sent</string>
    <string name="comment_updated">Comment updated</string>
    <string name="delete">Delete</string>
    <string name="delete_old_locations">Remove the old places on the phone</string>
    <string name="delete_data_from_cloud">Delete data from cloud</string>
    <string name="details">Details</string>
    <string name="download_different_data">Download different data</string>
    <string name="district">District</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_verification_required">E-mail verification required</string>
    <string name="error">Error</string>
    <string name="error_for_account">You must sign in to comment</string>
    <string name="error_location">Make sure the location is on!</string>
    <string name="error_comment_not_updated">Error!!, comment could not be updated</string>
    <string name="gallery">Gallery</string>
    <string name="give_permission">Give permission</string>
    <string name="gps_not_on">GPS not on</string>
    <string name="images">Images</string>
    <string name="internet_is_not_open">Internet is not open</string>
    <string name="location_not_found">Error! Location not found.</string>
    <string name="location_is_not_open">Location is not open</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_first">You must logout first</string>
    <string name="map">Map</string>
    <string name="map_type">Map type</string>
    <string name="map_type_default">Default</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="max_4_routes_can_be_added">Max 4 routes can be added</string>
    <string name="max_number_of_locations">Max number of locations</string>
    <string name="max_distance">Max distance(m)(circle)</string>
    <string name="new_email">New e-mail</string>
    <string name="no_comment_yet">No comment has been made on this place yet</string>
    <string name="not_found_info">Sorry, no information found about this place</string>
    <string name="not_visited">Not visited</string>
    <string name="only_internet">Get locations internet</string>
    <string name="only_saved_locations">Show only saved locations</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="password_changed">Password changed</string>
    <string name="permission_needed">Permission needed</string>
    <string name="permission_needed_for_location">Permission needed for location</string>
    <string name="please_select_location">Please select location</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="route_added">Route added</string>
    <string name="search">Search…</string>
    <string name="saved">Saved</string>
    <string name="saved_locations">Saved locations</string>
    <string name="save_successful">Save successful</string>
    <string name="settings">Settings</string>
    <string name="show_all">Show all</string>
    <string name="show_circle">Show circle</string>
    <string name="start">Start</string>
    <string name="state">State</string>
    <string name="street">Street</string>
    <string name="suburb">Suburb</string>
    <string name="selected_routes">Selected routes</string>
    <string name="traffic">Traffic</string>
    <string name="title_activity_maps">Travel Assistant</string>
    <string name="update">Update</string>
    <string name="upload_different_data">Upload different data</string>
    <string name="username">username</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="visited_in_the_past">Visited in the past</string>
    <string name="visited_today">Visited today</string>
    <string name="you_havent_added_a_picture">You havent added a picture yet</string>
    <string name="remove_google_map_icons">  <!-- Haritadaki diğer ikonları isimleri gizlemek için -->
        [
    {
      \"featureType\": \"poi\",
      \"elementType\": \"all\",
      \"stylers\": [
        {
          \"visibility\": \"off\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"labels.icon\",
      \"stylers\": [
        {
          \"visibility\": \"off\"
        }
      ]
    }
  ]
  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>