<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".fragment.SettingsFragment"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_margin="5dp"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic"
            android:fontFamily="@font/carter_one"
            android:textSize="20sp"
            android:padding="2dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp"
            android:layout_margin="5dp"
            android:background="@drawable/recycler_image_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_number_of_locations"
                android:textColor="@android:color/black"
                android:fontFamily="@font/autour_one"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <SeekBar
                    android:id="@+id/seekbar_point"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="150"
                    android:progress="0"
                    android:progressBackgroundTint="#912cba"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/seekbar_point_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:text="0"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp"
            android:layout_margin="5dp"
            android:background="@drawable/recycler_image_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_distance"
                android:textColor="@android:color/black"
                android:fontFamily="@font/autour_one"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <SeekBar
                    android:id="@+id/seekbar_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="10000"
                    android:progress="0"
                    android:progressBackgroundTint="#912cba"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/seekbar_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:text="0"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_margin="5dp"
            android:background="@drawable/recycler_image_back">

            <Switch
                android:id="@+id/switch_show_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_circle"
                android:textSize="14sp"
                android:fontFamily="@font/autour_one"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recycler_image_back"
            android:padding="7dp"
            android:layout_margin="5dp">

            <Switch
                android:id="@+id/switch_is_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic"
                android:textSize="14sp"
                android:fontFamily="@font/autour_one"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp"
            android:layout_margin="5dp"
            android:background="@drawable/recycler_image_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_type"
                android:textSize="15sp"
                android:fontFamily="@font/autour_one"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/type_default_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/type_default"
                        android:padding="2dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_type_default"
                        android:textSize="14sp"
                        android:fontFamily="@font/autour_one"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/type_terrain_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/type_terrain"
                        android:padding="2dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_type_terrain"
                        android:textSize="14sp"
                        android:fontFamily="@font/autour_one"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/type_satellite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/type_satellite"
                        android:padding="2dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_type_satellite"
                        android:textSize="14sp"
                        android:fontFamily="@font/autour_one"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recycler_image_back"
            android:orientation="vertical"
            android:padding="7dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_32"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_visited"
                    android:textSize="14sp"
                    android:fontFamily="@font/autour_one"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_32"
                    app:tint="#E42824"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visited_in_the_past"
                    android:textSize="14sp"
                    android:fontFamily="@font/autour_one"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_32"
                    app:tint="#15E418"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visited_today"
                    android:textSize="14sp"
                    android:fontFamily="@font/autour_one"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_32"
                    app:tint="#0000FF"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_locations"
                    android:textSize="14sp"
                    android:fontFamily="@font/autour_one"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>