<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_alert_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_routes"
        android:fontFamily="@font/carter_one"
        android:textSize="17sp"
        android:textColor="#912cba"
        android:layout_margin="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_selected_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        tools:listitem="@layout/selected_routes_adapter_item"
        app:layout_constraintBottom_toTopOf="@+id/linear_profiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linear_profiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/recycler_selected_routes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_margin="7dp">

        <ImageView
            android:id="@+id/profile_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/car_32"
            android:background="@drawable/button_back_3"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/profile_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bike_32"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/profile_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/walking_32"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_back_1_colorful"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/autour_one"/>

        <Button
            android:id="@+id/add_route_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_back_1_colorful"
            android:text="@string/add_route"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/autour_one" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_back_1_colorful"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/autour_one" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>